<resources>
    <string name="app_name">Orchid</string>
    <string name="title_activity_main2">English Learning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_check">Check</string>

    <string name="menu_test_level1">Level 1</string>
    <string name="menu_test_level2">Level 2</string>
    <string name="menu_test_level3">Level 3</string>
    <string name="menu_test_level4">Level 4</string>
    <string name="menu_test_level5">Level 5</string>
    <string name="menu_test_level6">Level 6</string>
    <string name="menu_test_level7">Level 7</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_thongbao">Thông báo</string>
    <string name="menu_tienich">Tiện ích</string>
    <string name="menu_list">Danh mục</string>
    <string name="menu_nguoidung">Người dùng</string>
    <string name="menu_user">User</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_translate">Translate</string>
    <string name="menu_test">Test</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About App</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
