<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trangchu"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_danhmuc"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_tienich"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/menu_tienich" />
        <item
            android:id="@+id/nav_thongbao"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_thongbao" />
        <item
            android:id="@+id/nav_nguoidung"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/menu_nguoidung" />
    </group>
</menu>
